Fixed the issue for Sector icons alignment on the homepage. Closes #26

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2126,7 +2126,7 @@ input:-moz-placeholder {
 }
 
 .job-category-items .category-list li {
-	width: 20%;
+	width: 25%;
 	float: left;
 	min-height: 90px;
 	margin-bottom: 25px;
